--- a/formulario.html
+++ b/formulario.html
@@ -323,7 +323,7 @@
   <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center">
 
     <!-- Then put toasts within -->
-    <div id="alertToast" class="toast centrarAlert" role="alert" aria-live="assertive" aria-atomic="true">
+    <div id="alertToast" class="toast centrarAlert" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
       <div class="toast-header">
         <img src="recursos/favicon-16x16.png" class="rounded me-2" alt="...">
         <strong class="me-auto">Hubo un problema</strong>
